WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151877
[iOS] Bail out if the page proxy is invalid when WebPageProxy::processWillBecome{Foreground, Suspended}() are called
https://bugs.webkit.org/show_bug.cgi?id=151877
Summary
[iOS] Bail out if the page proxy is invalid when WebPageProxy::processWillBec...
Daniel Bates
Reported
2015-12-04 11:23:52 PST
Assume you have a single web page p open in MobileSafari (or nothing open - about:blank is implicitly loaded, though the favorites screen is showing). Suppose the web page crashes. Then the WebPageProxy p' associated with p will be marked as invalid (WebPageProxy::m_isValid == false) and the ProcessThrottler of the WebProcessProxy associated with p will schedule a process suspension timer (since there are no foreground or background processes - the foreground web page crashed). Assuming the process suspension timer fires before the WebPageProxy object associated with the crashed web page reattaches to a new web process then WebPageProxy::processWillBecomeSuspended() will be called on p' and the assertion ASSERT(m_isValid) will fail.
Attachments
Patch
(2.08 KB, patch)
2015-12-04 11:28 PST
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Daniel Bates
Comment 1
2015-12-04 11:28:33 PST
Created
attachment 266645
[details]
Patch
Daniel Bates
Comment 2
2015-12-09 18:50:50 PST
Comment on
attachment 266645
[details]
Patch Clearing flags on attachment: 266645 Committed
r193883
: <
http://trac.webkit.org/changeset/193883
>
Daniel Bates
Comment 3
2015-12-09 18:50:55 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug